#97 spacing bug fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -465,7 +465,7 @@ nav {
   }
 
   .nav__list > * + * {
-    margin-right: 1em;
+    margin-left: 1em;
   }
 }
 
